kubernetes/manifests/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db1
  labels:
    app: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        command: ["nginx", "-g", "daemon off;"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config-db1
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db1
spec:
  selector:
    app: db1
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db2
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        command: ["nginx", "-g", "daemon off;"]
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config-db2
---
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db2
spec:
  selector:
    app: db2
  ports:
  - port: 5432
    targetPort: 5432
